==> EmcraftSystems/linux-emcraft/arch/arm/mach-kinetis/clock.c <==
#include <linux/types.h>
#include <linux/init.h>
#include <linux/module.h>
#include <linux/io.h>
#include <linux/delay.h>
#include <asm/clkdev.h>
#include <mach/platform.h>
#include <mach/clock.h>
#include <mach/kinetis.h>
#include <mach/power.h>
#define CONFIG_KINETIS_OSC0_RATE	50000000	/* 50 MHz */
#define CONFIG_KINETIS_OSC1_RATE	12000000	/* 12 MHz */
#define KINETIS_USBHS_REQ_RATE		60000000
#define KINETIS_MCG_C5_PRDIV_BITS	0
#define KINETIS_MCG_C5_PRDIV_MSK \
	(((1 << 3) - 1) << KINETIS_MCG_C5_PRDIV_BITS)
#define KINETIS_MCG_C5_PLLSTEN_MSK	(1 << 5)
#define KINETIS_MCG_C5_PLLREFSEL_BIT	7
#define KINETIS_MCG_C5_PLLREFSEL_MSK	(1 << KINETIS_MCG_C5_PLLREFSEL_BIT)
#define KINETIS_MCG_C6_VDIV_BITS	0
#define KINETIS_MCG_C6_VDIV_MSK \
	(((1 << 5) - 1) << KINETIS_MCG_C6_VDIV_BITS)
#define KINETIS_MCG_C6_PLLS_MSK		(1 << 6)
#define KINETIS_MCG_C11_PRDIV_BITS	0
#define KINETIS_MCG_C11_PRDIV_MSK \
	(((1 << 3) - 1) << KINETIS_MCG_C11_PRDIV_BITS)
#define KINETIS_MCG_C11_PLLCS_MSK	(1 << 4)
#define KINETIS_MCG_C11_PLLSTEN1_MSK	(1 << 5)
#define KINETIS_MCG_C11_PLLCLKEN1_MSK	(1 << 6)
#define KINETIS_MCG_C11_PLLREFSEL1_BIT	7
#define KINETIS_MCG_C11_PLLREFSEL1_MSK	(1 << KINETIS_MCG_C11_PLLREFSEL1_BIT)
#define KINETIS_MCG_C12_VDIV1_BITS	0
#define KINETIS_MCG_C12_VDIV1_MSK \
	(((1 << 5) - 1) << KINETIS_MCG_C12_VDIV1_BITS)
#define KINETIS_SIM_SOPT2_USBHSRC_BITS	2
#define KINETIS_SIM_SOPT2_USBHSRC_MSK	(3 << KINETIS_SIM_SOPT2_USBHSRC_BITS)

void __init kinetis_clock_init(void)
{
	int i;
	int platform;

	/* MCU-specific parameters */
	int vco_div;
	int vdiv_min;
	/* PLL0 or PLL1 used to generate MCGOUTCLK ("main" PLL) */
	int pll_sel;
	/* OSC0 or OSC1 used as clock source for the "main" PLL */
	int osc_sel;
	/* Frequency at the MCGOUTCLK output of the MCG */
	int mcgout;
	/* USB High Speed clock divider values */
	int usbhs_div;
	int usbhs_frac;

	/*
	 * Default values for the MCU-specific parameters
	 */
	vco_div = 1;
	vdiv_min = 24;

	/*
	 * Initialize the MCU-specific parameters
	 */
	platform = kinetis_platform_get();
	switch (platform) {
	case PLATFORM_KINETIS_TWR_K70F120M:
	case PLATFORM_KINETIS_K70_SOM:
	case PLATFORM_KINETIS_K61_SOM:
		/*
		 * The PLL0 in a PK70FN1M0VMJ12 and PK70FN1M0VMJ15 divides
		 * its output rate by 2.
		 * This does not apply to 100 MHz K60 MCUs.
		 *
		 * The minimum value for VDIV is also different
		 * for 100 MHz K60 MCUs.
		 */
		vco_div = 2;
		vdiv_min = 16;
		break;
	default:
		/*
		 * Let's assume smth in this case; maybe things
		 * will work...
		 */
		printk(KERN_WARNING "%s: unsupported platform %d\n",
			__func__, platform);
		break;
	}

	/*
	 * Check whether PLL0 or PLL1 is used for MCGOUTCLK
	 */
	pll_sel = !!(KINETIS_MCG->c11 & KINETIS_MCG_C11_PLLCS_MSK);

	/*
	 * Check whether OSC0 or OSC1 is used to source the main PLL
	 */
	if (pll_sel)
		osc_sel = !!(KINETIS_MCG->c11 & KINETIS_MCG_C11_PLLREFSEL1_MSK);
	else
		osc_sel = !!(KINETIS_MCG->c5 & KINETIS_MCG_C5_PLLREFSEL_MSK);

	/*
	 * Start with the MCG input clock
	 */
	mcgout = osc_sel ? CONFIG_KINETIS_OSC1_RATE : CONFIG_KINETIS_OSC0_RATE;

	/*
	 * Apply dividers and multipliers of the selected PLL
	 */
	if (pll_sel) {
		/*
		 * PLL1 internal divider (PRDIV)
		 */
		mcgout /= ((KINETIS_MCG->c11 & KINETIS_MCG_C11_PRDIV_MSK) >>
			KINETIS_MCG_C11_PRDIV_BITS) + 1;
		/*
		 * PLL1 multiplication factor (VDIV)
		 */
		mcgout *= ((KINETIS_MCG->c12 & KINETIS_MCG_C12_VDIV1_MSK) >>
			KINETIS_MCG_C12_VDIV1_BITS) + vdiv_min;
	} else {
		/*
		 * PLL0 internal divider (PRDIV)
		 */
		mcgout /= ((KINETIS_MCG->c5 & KINETIS_MCG_C5_PRDIV_MSK) >>
			KINETIS_MCG_C5_PRDIV_BITS) + 1;
		/*
		 * PLL0 multiplication factor (VDIV)
		 */
		mcgout *= ((KINETIS_MCG->c6 & KINETIS_MCG_C6_VDIV_MSK) >>
			KINETIS_MCG_C6_VDIV_BITS) + vdiv_min;
	}

	/*
	 * Apply the PLL output divider
	 */
	mcgout /= vco_div;

	/*
	 * Save MCGOUTCLK frequency
	 */
	clock_val[CLOCK_MCGOUTCLK] = mcgout;

	/*
	 * CPU clock
	 */
	clock_val[CLOCK_CCLK] = mcgout /
		(((KINETIS_SIM->clkdiv1 & KINETIS_SIM_CLKDIV1_OUTDIV1_MSK) >>
		KINETIS_SIM_CLKDIV1_OUTDIV1_BITS) + 1);

	/*
	 * The SYSTICK clock is always the same as the CPU clock
	 * on the Freescale Kinetis MCUs.
	 */
	clock_val[CLOCK_SYSTICK] = clock_val[CLOCK_CCLK];

	/*
	 * Peripheral clock
	 */
	clock_val[CLOCK_PCLK] = mcgout /
		(((KINETIS_SIM->clkdiv1 & KINETIS_SIM_CLKDIV1_OUTDIV2_MSK) >>
		KINETIS_SIM_CLKDIV1_OUTDIV2_BITS) + 1);

	/*
	 * Ethernet clock
	 */
	clock_val[CLOCK_MACCLK] = CONFIG_KINETIS_OSC0_RATE;

	/*
	 * LCD Controller clock
	 */
	kinetis_lcdc_update_clock_rate();

	/*
	 * USB High Speed controller clock
	 */
	/* Use fractional divider if "msgout" is not a multiple of 60MHz */
	usbhs_frac = (mcgout % KINETIS_USBHS_REQ_RATE) != 0;
	usbhs_div = mcgout * (usbhs_frac + 1) / KINETIS_USBHS_REQ_RATE - 1;
	if (usbhs_div < 0)
		usbhs_div = 0;
	if (usbhs_div > 7)
		usbhs_div = 7;
	clock_val[CLOCK_USBHS] = mcgout * (usbhs_frac + 1) / (usbhs_div + 1);
	/* Write USB-HS clock configuration to registers */
	if (clock_val[CLOCK_USBHS] == KINETIS_USBHS_REQ_RATE) {
		/* Do not output the 60MHz ULPI clock */
		KINETIS_SIM->mcr &= ~KINETIS_SIM_MCR_ULPICLKOBE_MSK;
		/* Clock source: MCGOUT clock (PLL0 or PLL1) */
		KINETIS_SIM->sopt2 =
			(KINETIS_SIM->sopt2 & ~KINETIS_SIM_SOPT2_USBHSRC_MSK) |
			(pll_sel ? KINETIS_SIM_SOPT2_USBHSRC_PLL1 :
				KINETIS_SIM_SOPT2_USBHSRC_PLL0);
		/* Clock divider */
		KINETIS_SIM->clkdiv2 =
			(KINETIS_SIM->clkdiv2 &
				(KINETIS_SIM_CLKDIV2_USBHSDIV_MSK |
				KINETIS_SIM_CLKDIV2_USBHSFRAC_MSK)) |
			(usbhs_frac << KINETIS_SIM_CLKDIV2_USBHSFRAC_BIT) |
			(usbhs_div << KINETIS_SIM_CLKDIV2_USBHSDIV_BIT);
	} else {
		clock_val[CLOCK_USBHS] = 0;
	}

	/*
	 * Initialize the `clk_*` structures
	 */
	clk_net.rate = clock_val[CLOCK_MACCLK];
	/*
	 * UART0 and UART1 are clocked from the core clock, the remaining UARTs
	 * are clocked from the bus clock.
	 */
	for (i = 0; i < ARRAY_SIZE(clk_uart); i++)
		clk_uart[i].rate = clock_val[i <= 1 ? CLOCK_CCLK : CLOCK_PCLK];

	/*
	 * Register clocks with the `clk_*` infrastructure
	 */
	for (i = 0; i < ARRAY_SIZE(kinetis_clkregs); i++)
		clkdev_add(&kinetis_clkregs[i]);
}

unsigned int kinetis_clock_get(enum kinetis_clock clk)
{
	return clock_val[clk];
}
