==> EmcraftSystems/linux-emcraft/arch/arm/mach-stm32/clock.c <==
#include <linux/types.h>
#include <linux/init.h>
#include <linux/io.h>
#include <linux/module.h>
#include <asm/clkdev.h>
#include <mach/platform.h>
#include <mach/clock.h>
#include <mach/stm32.h>
#define STM32_HSI_HZ			8000000		/* STM32F1: 8 MHz */
#define STM32_HSI_HZ			16000000	/* STM32F2: 16 MHz */
#define STM32_RCC_CFGR_SWS_BIT		2	/* System clock switch status */
#define STM32_RCC_CFGR_SWS_MSK		0x3
#define STM32_RCC_CFGR_SWS_HSI		0x0
#define STM32_RCC_CFGR_SWS_HSE		0x1
#define STM32_RCC_CFGR_SWS_PLL		0x2
#define STM32_RCC_CFGR_HPRE_BIT		4	/* AHB prescaler	      */
#define STM32_RCC_CFGR_HPRE_MSK		0xF
#define STM32_RCC_CFGR_PPRE1_BIT	8	/* STM32F1 */
#define STM32_RCC_CFGR_PPRE1_BIT	10	/* STM32F2 */
#define STM32_RCC_CFGR_PPRE1_MSK	0x7
#define STM32_RCC_CFGR_PPRE1_DIVNO	0x0
#define STM32_RCC_CFGR_PPRE2_BIT	11	/* STM32F1 */
#define STM32_RCC_CFGR_PPRE2_BIT	13	/* STM32F2 */
#define STM32_RCC_CFGR_PPRE2_MSK	0x7
#define STM32_RCC_CFGR_PPRE2_DIVNO	0x0
#define STM32F2_RCC_PLLCFGR_HSESRC	(1 << 22) /* Main PLL entry clock src */
#define STM32F2_RCC_PLLCFGR_PLLM_BIT	0	/* Div factor for input clock */
#define STM32F2_RCC_PLLCFGR_PLLM_MSK	0x3F
#define STM32F2_RCC_PLLCFGR_PLLN_BIT	6	/* Mult factor for VCO	      */
#define STM32F2_RCC_PLLCFGR_PLLN_MSK	0x1FF
#define STM32F2_RCC_PLLCFGR_PLLP_BIT	16	/* Div factor for main sysclk */
#define STM32F2_RCC_PLLCFGR_PLLP_MSK	0x3
#define STM32F2_RCC_PLLCFGR_PLLQ_BIT	24	/* Div factor for USB,SDIO,.. */
#define STM32F2_RCC_PLLCFGR_PLLQ_MSK	0xF

void __init stm32_clock_init(void)
{
	static u32 apbahb_presc_tbl[] = {0, 0, 0, 0, 1, 2, 3, 4,
					 1, 2, 3, 4, 6, 7, 8, 9};

	u32	hse_hz, tmp, presc;
#ifdef CONFIG_ARCH_STM32F1
	u32	pllmul;
#else
	u32	pllvco, pllp, pllm;
#endif
	int	platform;
	int	i;

	/*
	 * Select HSE (external oscillator) freq value depending on the
	 * platform we're running on
	 */
	platform = stm32_platform_get();
	switch (platform) {
#ifdef CONFIG_ARCH_STM32F1
	case PLATFORM_STM32_SWISSEMBEDDED_COMM:
		hse_hz = 8000000;
		break;
#else
	case PLATFORM_STM32_STM3220G_EVAL:
	case PLATFORM_STM32_STM3240G_EVAL:
		hse_hz = 25000000;
		break;
	case PLATFORM_STM32_STM_SOM:
	case PLATFORM_STM32_STM_STM32F439_SOM:
		hse_hz = 12000000;
		break;
	case PLATFORM_STM32_STM_DISCO:
		hse_hz = 8000000;
		break;
#endif
	default:
		/*
		 * Let's assume smth in this case; maybe things will work..
		 */
		hse_hz = 25000000;
		printk(KERN_WARNING "%s: unsupported platform %d\n", __func__,
			platform);
		break;
	}

	/*
	 * Get SYSCLK
	 */
#ifndef CONFIG_ARCH_STM32F1
	pllvco = 0;
#endif
	tmp  = STM32_RCC->cfgr >> STM32_RCC_CFGR_SWS_BIT;
	tmp &= STM32_RCC_CFGR_SWS_MSK;
	switch (tmp) {
	case STM32_RCC_CFGR_SWS_HSI:
		/* HSI used as system clock source */
		clock_val[CLOCK_SYSCLK] = STM32_HSI_HZ;
		break;
	case STM32_RCC_CFGR_SWS_HSE:
		/* HSE used as system clock source */
		clock_val[CLOCK_SYSCLK] = hse_hz;
		break;
	case STM32_RCC_CFGR_SWS_PLL:
#ifdef CONFIG_ARCH_STM32F1
		/* PLL used as system clock source */
		/*
		 * SYSCLK = (HSE/PLLXTPRE or HSI/2) * PLLMUL
		 */
		pllmul = ((STM32_RCC->cfgr >> STM32F1_RCC_CFGR_PLLMUL_BITS) &
			STM32F1_RCC_CFGR_PLLMUL_MSK) + 2;

		if (STM32_RCC->cfgr & STM32F1_RCC_CFGR_PLLSRC_MSK) {
			/* HSE used as PLL clock source */
			tmp = hse_hz;
			if (STM32_RCC->cfgr & STM32F1_RCC_CFGR_PLLXTPRE_MSK)
				tmp /= 2;
		} else {
			/* HSI used as PLL clock source */
			tmp = STM32_HSI_HZ / 2;
		}

		clock_val[CLOCK_SYSCLK] = tmp * pllmul;
#else /* Case of STM32F2 */
		/* PLL used as system clock source */
		/*
		 * PLL_VCO = (HSE_VALUE or HSI_VALUE / PLLM) * PLLN
		 * SYSCLK = PLL_VCO / PLLP
		 */
		pllm  = STM32_RCC->pllcfgr >> STM32F2_RCC_PLLCFGR_PLLM_BIT;
		pllm &= STM32F2_RCC_PLLCFGR_PLLM_MSK;

		if (STM32_RCC->pllcfgr & STM32F2_RCC_PLLCFGR_HSESRC) {
			/* HSE used as PLL clock source */
			tmp = hse_hz;
		} else {
			/* HSI used as PLL clock source */
			tmp = STM32_HSI_HZ;
		}
		pllvco  = STM32_RCC->pllcfgr >> STM32F2_RCC_PLLCFGR_PLLN_BIT;
		pllvco &= STM32F2_RCC_PLLCFGR_PLLN_MSK;
		pllvco *= tmp / pllm;

		pllp  = STM32_RCC->pllcfgr >> STM32F2_RCC_PLLCFGR_PLLP_BIT;
		pllp &= STM32F2_RCC_PLLCFGR_PLLP_MSK;
		pllp  = (pllp + 1) * 2;

		clock_val[CLOCK_SYSCLK] = pllvco / pllp;
#endif /* CONFIG_ARCH_STM32F1 */
		break;
	default:
		clock_val[CLOCK_SYSCLK] = STM32_HSI_HZ;
		break;
	}

	/*
	 * Get HCLK
	 */
	tmp  = STM32_RCC->cfgr >> STM32_RCC_CFGR_HPRE_BIT;
	tmp &= STM32_RCC_CFGR_HPRE_MSK;
	presc = apbahb_presc_tbl[tmp];
	clock_val[CLOCK_HCLK] = clock_val[CLOCK_SYSCLK] >> presc;

	/*
	 * Get PCLK1
	 */
	tmp  = STM32_RCC->cfgr >> STM32_RCC_CFGR_PPRE1_BIT;
	tmp &= STM32_RCC_CFGR_PPRE1_MSK;
	presc = apbahb_presc_tbl[tmp];
	clock_val[CLOCK_PCLK1] = clock_val[CLOCK_HCLK] >> presc;

	/*
	 * Get PTMR1: see "Clock tree" in RM, if APB1 is prescaled, then x2
	 */
	clock_val[CLOCK_PTMR1] = clock_val[CLOCK_PCLK1];
	if (tmp != STM32_RCC_CFGR_PPRE1_DIVNO)
		clock_val[CLOCK_PTMR1] *= 2;

	/*
	 * Get PCLK2
	 */
	tmp  = STM32_RCC->cfgr >> STM32_RCC_CFGR_PPRE2_BIT;
	tmp &= STM32_RCC_CFGR_PPRE2_MSK;
	presc = apbahb_presc_tbl[tmp];
	clock_val[CLOCK_PCLK2] = clock_val[CLOCK_HCLK] >> presc;

	/*
	 * Get PTMR2: see "Clock tree" in RM, if APB2 is prescaled, then x2
	 */
	clock_val[CLOCK_PTMR2] = clock_val[CLOCK_PCLK2];
	if (tmp != STM32_RCC_CFGR_PPRE2_DIVNO)
		clock_val[CLOCK_PTMR2] *= 2;

	/*
	 * Initialize the `clk_*` structures
	 */
#ifndef CONFIG_ARCH_STM32F1
	if (pllvco) {
		clk_mci.rate = pllvco /
			((STM32_RCC->pllcfgr >> STM32F2_RCC_PLLCFGR_PLLQ_BIT) &
			STM32F2_RCC_PLLCFGR_PLLQ_MSK);
	}
#endif

	/*
	 * Register clocks with the `clk_*` infrastructure
	 */
	for (i = 0; i < ARRAY_SIZE(stm32_clkregs); i++)
		clkdev_add(&stm32_clkregs[i]);
}

unsigned int stm32_clock_get(enum stm32_clock clk)
{
	return clock_val[clk];
}
